Make sure we don't stretch the thumbnails - and also make sure scrolling calculations work properly in our simplistic autoscroll

--- a/main.css
+++ b/main.css
@@ -10,6 +10,7 @@ img.highlighted {
 
 .result-container {
     margin-top: 10px;
+    max-width: 200px; /*this is width of the 'fixed_width' img version*/
 }
 html, body {
     height:100%;
